--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,8 +2,7 @@
 # in separate files. This file adds all other parameters apart from Enabled.
 
 inherit_from:
-  - enabled.yml
-  - disabled.yml
+  - .rubocop_custom.yml
 
 # Common configuration.
 AllCops:
