--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,3 +5,7 @@ michael:
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
   # convention: all fixture users have the same password ('password')
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
