--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,21 +4,31 @@ admin_user:
   email: admin_user@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
   # convention: all fixture users have the same password ('password')
 
 non_admin_user:
   name: Non-admin User
   email: non_admin_user@example.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 
 other_user:
   name: Other User
   email: other-user@example.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
-<% 30.times do |n| %>
+
+<% 99.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
