Micropost fixtures with user associations

--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -3,11 +3,21 @@
 ten_min_ago:
   content: "I just ate an orange!"
   created_at: <%= 10.minutes.ago %>
+  user: non_admin_user
 
 most_resent:
   content: "Writing a short test"
   created_at: <%= Time.zone.now %>
+  user: non_admin_user
 
 two_years_ago:
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
   created_at: <%= 2.years.ago %>
+  user: non_admin_user
+
+<% 30.times do |n| %>
+micropost_<%= n %>:
+  content: <%= Faker::Lorem.sentence(5) %>
+  created_at: <%= 42.days.ago %>
+  user: non_admin_user
+<% end %>
