--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -15,6 +15,11 @@ two_years_ago:
   created_at: <%= 2.years.ago %>
   user: non_admin_user
 
+for_other_user:
+  content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
+  created_at: <%= Time.zone.now %>
+  user: other_user
+
 <% 30.times do |n| %>
 micropost_<%= n %>:
   content: <%= Faker::Lorem.sentence(5) %>
