--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,1 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+one:
+  follower: follower
+  followed: non_admin_user
+
+two:
+  follower: non_admin_user
+  followed: superstar
